--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>React Basic</title>
   </head>
+  <!--【お作法】index.html は以下の記述のみ-->
   <body>
     <div id="root"></div>
   </body>
